Premier commit du projet puzzle game

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3859091246952232"
+     crossorigin="anonymous"></script>
+     <meta name="google-adsense-account" content="ca-pub-3859091246952232">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer type="module"></script>
   <title>Puzzle Game</title>
 </head>
-<div>
+<body>
+  <h1>La régle du jeu:
+Quand une pièce est au-dessus d’une bonne case → ✅ apparaît avec un fade-in.
+Quand une pièce est au-dessus d’une mauvaise case → ❌ secoue rapidement.
+Dès que tu quittes la case → l’emoji disparaît.</h1>
   <div class="container">
     <div class="puzzle-wrapper">
       <div class="cells"></div>
@@ -16,24 +23,29 @@
       <div class="final-img">
         <div class="upload-img">
           <div class="btns">
-            
-            <label for="input-file" class="img-btn btn">TELECHARGER UNE NOUVELLE IMAGE</label>
+            <button class="img-btn btn random-btn">Get Random Image  (Obtenir une image aléatoire)</button>
           </div>
-
-          <!-- input bien écrit ici -->
-          <input type="file" accept="image/jpeg, image/png, image/jpg" id="input-file" />
+          <input type="file" accept="image/*" id="input-file" />
         </div>
       </div>
     </div>
   </div>
+
   <div class="modal">
     <div class="modal-content">
       <h2 class="modal-heading">Game Over</h2>
-      <h3 class="modal-text">YOU WON. <span class="attempt">5</span> wrong attempts</h3>
+      <h3 class="modal-text">
+        YOU WON. <span class="attempt">5</span> wrong attempts
+      </h3>
       <button class="modal-btn btn">Start Again</button>
     </div>
   </div>
-  <h1 class="heading">PUZZLE QUEST BETA</h1>
-</div>
+
+  <div class="loader action">
+    <img src="images/loader.gif" alt="Loading..." />
+  </div>
+
+  <h1 class="heading">Puzzle Quest 3 👉 </h1>
+
 </body>
 </html>
